--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@heroicons/react": "^1.0.3",
+    "date-fns": "^2.0.0-beta.5",
+    "date-range": "^0.0.2",
     "next": "latest",
     "react": "^17.0.2",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
