--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
     "@date-io/date-fns": "^1.3.13",
     "@heroicons/react": "^1.0.3",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.23.0",
     "date-range": "^0.0.2",
     "next": "latest",
     "react": "^17.0.2",
