--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@heroicons/react": "^1.0.3",
     "date-fns": "^2.23.0",
     "date-range": "^0.0.2",
+    "geolib": "^3.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.16",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
